k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoshare-service
  namespace: photoshare
  labels:
    app: photoshare
spec:
  selector:
    app: photoshare
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
